--- a/app/src/main/res/layout/activity_mother_home.xml
+++ b/app/src/main/res/layout/activity_mother_home.xml
@@ -16,40 +16,6 @@
         android:padding="15dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/Meternal_health"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Meternal Health"
-            android:textColor="@color/colorwhite"
-            android:textSize="25sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-<!--            android:layout_marginStart="15dp"/>-->
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/colorwhite"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/Meternal_health"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <ImageView
-            android:id="@+id/imagemenu"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_menu"
-            android:tint="@color/colorwhite"
-            app:layout_constraintBottom_toBottomOf="@id/Meternal_health"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/Meternal_health"
-            />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -60,12 +26,11 @@
             android:background="@drawable/white_rectangle_background"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imagemenu">
+            app:layout_constraintTop_toBottomOf="@id/layoutheader">
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="Search Elements"
@@ -227,7 +192,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/doctor"
+                android:id="@+id/mother_information"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -246,20 +211,20 @@
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
-                    android:src="@drawable/profile"/>
+                    android:src="@drawable/info"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Profile"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp"
+                    android:text="FIRST AID "
+                    android:textColor="@color/colorAccentt"
+                    android:textSize="15sp"
                     android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/mother"
+                android:id="@+id/logout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -278,47 +243,15 @@
                     android:layout_margin="8dp"
                     android:contentDescription="@string/app_name"
                     android:padding="8dp"
-                    android:src="@drawable/helppost"/>
+                    android:src="@drawable/logout"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Help Post"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/sister"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/white_rectangle_background"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15dp"
-                app:layout_constraintDimensionRatio="H, 1.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/help_post"
-                app:layout_constraintTop_toBottomOf="@id/doctor">
-
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="8dp"
-                    android:contentDescription="@string/app_name"
-                    android:padding="8dp"
-                    android:src="@drawable/profile"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Profile"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp"
+                    android:text="LOGOUT"
+                    android:textColor="@color/colorAccentt"
+                    android:textSize="15sp"
                     android:textStyle="bold"/>
             </LinearLayout>
 
