--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:apps="http://schemas.android.com/tools">
+    <item android:id="@+id/add_post"
+        android:title="Add post"
+        apps:showAsAction="never"/>
+    <item android:id="@+id/logout"
+        android:title="Logout"
+        apps:showAsAction="never"/>
 </menu>
